--- a/views/migration_views.xml
+++ b/views/migration_views.xml
@@ -10,7 +10,7 @@
                         <field name="db"/>
                         <field name="username"/>
                         <field name="password"/>
-                        <button string="Iniciar Migración" type="object" name="get_products_from_odoo16" class="btn-primary"/>
+                        <button string="Iniciar coneccion" type="object" name="connect_to_odoo16" class="btn-primary"/>
                         <button string="procesar Migración" type="object" name="process_and_save_products" class="btn-primary"/>
                     </group>
                 </sheet>
