--- a/views/migration_views.xml
+++ b/views/migration_views.xml
@@ -10,8 +10,10 @@
                         <field name="db"/>
                         <field name="username"/>
                         <field name="password"/>
-                        <button string="Iniciar coneccion" type="object" name="connect_to_odoo16" class="btn-primary"/>
-                        <button string="sincronizar imagenes de productos" type="object" name="sync_product_images_by_name" class="btn-primary"/>
+                        <button string="Iniciar coneccion" type="object" name="connect_to_odoo" class="btn-primary"/>
+                        <button string="sincronizar imagenes   " type="object" name="copiar_imagenes_productos" class="btn-primary"/>
+                        <button string="sincronizar contactos   " type="object" name="migrate_contacts" class="btn-primary"/>
+                        <button string="migrar Productos   " type="object" name="migrate_products" class="btn-primary"/>
                     </group>
                 </sheet>
             </form>
