--- a/views/migration_views.xml
+++ b/views/migration_views.xml
@@ -14,6 +14,7 @@
                         <button string="sincronizar imagenes   " type="object" name="copiar_imagenes_productos" class="btn-primary"/>
                         <button string="sincronizar contactos   " type="object" name="migrate_contacts" class="btn-primary"/>
                         <button string="migrar Productos   " type="object" name="migrate_products" class="btn-primary"/>
+                        <button string="descargar Productos   " type="object" name="download_product_batches" class="btn-primary"/>
                     </group>
                 </sheet>
             </form>
