--- a/views/migration_views.xml
+++ b/views/migration_views.xml
@@ -11,7 +11,7 @@
                         <field name="username"/>
                         <field name="password"/>
                         <button string="Iniciar coneccion" type="object" name="connect_to_odoo" class="btn-primary"/>
-                        <button string="sincronizar imagenes   " type="object" name="migrate_product_images" class="btn-primary"/>
+                        <button string="sincronizar imagenes   " type="object" name="copiar_imagenes_productos" class="btn-primary"/>
                         <button string="sincronizar contactos   " type="object" name="migrate_contacts" class="btn-primary"/>
                         <button string="migrar Productos   " type="object" name="migrate_products" class="btn-primary"/>
                         <button string="descargar Productos   " type="object" name="download_product_batches" class="btn-primary"/>
